# inversion-api-rust

./: Cargo.toml  README.md
crates/broker/: Cargo.toml
crates/broker/src/: inv_any.rs  inv_api_impl.rs  inv_api_spec.rs  inv_broker.rs  inv_codec.rs  inv_error.rs  inv_id.rs  inv_loader.rs  inv_share.rs  inv_uniq.rs  lib.rs
crates/broker/tests/: test-1.rs
crates/inversion_api_broker/: Cargo.toml
crates/inversion_api_broker/src/: inv_any.rs  inv_broker.rs  inv_id.rs  inv_share.rs  inv_uniq.rs  lib.rs  transfer.rs  uniq.rs
