[package]
name = "inversion_api_broker"
version = "0.0.1"
authors = ["neonphog <neonphog@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.15"
nanoid = "0.4.0"
once_cell = "1.8.0"
parking_lot = "0.11.1"
rand = "0.8.4"
rmp-serde = "0.15"
serde = { version = "1", features = [ "derive", "rc" ] }
serde_json = "1.0.66"
tokio = { version = "1.7.1", features = [ "full" ] }
